add aggressive-nsec: yes

--- a/templates/01general.conf.j2
+++ b/templates/01general.conf.j2
@@ -52,6 +52,7 @@ server:
     harden-short-bufsize: no
     harden-large-queries: no
     harden-dnssec-stripped:yes
+    aggressive-nsec: yes
 #    rate-limit: 1000
     logfile: "/var/lib/unbound/var/log/unbound.log"
 {% else %}
