Revert "01general.conf.j2: ansible syntax change?"
This reverts commit 8410ac3c52ebfc392ba8b1207958d7574f2b98a5.

--- a/templates/01general.conf.j2
+++ b/templates/01general.conf.j2
@@ -2,7 +2,7 @@
 
 server:
 {% for config in unbound_configuration %}
-    {{ config.keys() }}: {{ config.values() }}
+    {{ config.keys().0 }}: {{ config.values().0 }}
 {% endfor %}
 {% if unbound_anchor_enabled %}
     auto-trust-anchor-file: "{{unbound_anchorfile}}"
